# lvgl-bevy-demo

./: .gitignore  Cargo.toml  README.md  build.rs  espflash.toml  lv_conf.h  partitions.csv  purge.sh
.cargo/: config.toml
src/: heap.rs  main.rs
