[package]
name = "lvgl-bevy-demo-nostd"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "lvgl-bevy-demo-nostd"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-serial = { path = "../defmt-serial", version = "0.12.0", features = [
  "espflash"
] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
esp-hal = { version = "~1.0", features = ["defmt", "esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always build with some optimization
opt-level = "z"

[profile.release]
opt-level = "s"
debug = 2
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1  # LLVM can perform better optimizations using a single thread
