[package]
name = "lvgl-bevy-demo-nostd"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lib]
bench = false
path = "src/lib.rs"
test = false

[[bin]]
bench = false
name = "lvgl-bevy-demo-nostd"
path = "./src/bin/main.rs"
test = false

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
defmt = "1.0.1"
defmt-serial = { version = "0.13.0", features = ["espflash"] }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", default-features = false, features = [
  "defmt",
  "esp32",
  "global-allocator"
] }
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32"] }
esp-hal = { version = "~1.1", features = ["defmt", "esp32", "unstable"] }
esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp32",
] }
lv_bevy_ecs = { version = "0.10.0", features = [
  "critical-section",
  "defmt",
  "no_ecs",
  "rust-alloc"
] }
mipidsi = "0.10.0"
static_cell = "2.1.1"
xpt2046 = { git = "https://github.com/nullstalgia/mff-hr-v1.git", rev = "380384f0d44fa620bf083f2f751ea013fa8887db" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always build with some optimization
opt-level = "z"

[profile.release]
opt-level = "s"
debug = 2
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1  # LLVM can perform better optimizations using a single thread
