[package]
name = "lvgl-bevy-demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
resolver = "2"

[[bin]]
harness = false  # do not use the built in cargo test harness -> resolve rust-analyzer errors
name = "lvgl-bevy-demo"

[dependencies]
anyhow = "1.0.100"
embedded-graphics = "0.8.1"
esp-idf-svc = "0.52"
log = "0.4"
lv_bevy_ecs = {
  path = "../lv_bevy_ecs",
  version = "0.11.0-alpha",
  features = ["ctor", "no_ecs", "rust-alloc"]
}
mipidsi = "0.10.0"
static_cell = "2.1.0"
xpt2046 = {
  git = "https://github.com/nullstalgia/mff-hr-v1.git",
  rev = "380384f0d44fa620bf083f2f751ea013fa8887db"
}

[build-dependencies]
embuild = "0.33"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice and they don't increase the size on Flash

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1
# strip = true
